updated to include inspired by

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   Explain who your audience is.  (In particular, tell readers if the
   workshop is only open to people from a particular institution.
 -->
+<p>
+<strong>Background:</strong>
+This curriculum is based on the the work of <a href="http://www.software-carpentry.org">Software Carpentry </a>
+</p>
+
 <p id="who">
   <strong>Who:</strong>
   The course is aimed at graduate students and other researchers.
